--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Todo List</title>
 </head>
 <body>
-<section>
+<section id="btns" class="buttons">
   <button onclick="fetchTodos()">Fetch Todos</button>
   <button onclick="logTodos()">Log Todos</button>
   <button onclick="populateTodos()">Populate Todos</button>
